[package]
name = "osvg"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "osvg svgo"
repository = "https://github.com/ahaoboy/osvg"
homepage = "https://github.com/ahaoboy/osvg"
authors = ["ahaoboy"]

[dependencies]
rquickjs = { version = "0.8", features = ["loader", "bindgen"] }
clap = { version = "4.5", features = ["derive"], optional = true }

[features]
bindgen = ["rquickjs/bindgen"]
cli = ["clap"]

[[bin]]
required-features = ["cli"]
name = "osvg"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1